--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -24,13 +24,13 @@
     <ion-content>
       <ion-list>
         <ion-item nav-clear menu-close href="#/app/medis">
-          Medikamenten Liste
+          Liste
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/addMedi">
-          Medikament hinzufügen
+          Hinzufügen
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/notifications">
-          Benachrichtigungen
+          Zeitplan
         </ion-item>
       </ion-list>
     </ion-content>
