--- a/www/templates/notifications.html
+++ b/www/templates/notifications.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Benachrichtigungs-Plan">
+<ion-view view-title="Zeitplan">
     <ion-content>
         <ion-list>
             <ion-item ng-repeat="notification in allNotifications | orderBy : 'date'">
